- Fixed path to Flash 'bin' directories

--- a/src/charts/build.properties
+++ b/src/charts/build.properties
@@ -12,4 +12,4 @@ component.jsfiles=swfobject.js,FlashAdapter.js,Chart.js,PieChart.js,CartesianCha
 flexbin=D:/Datas/Code/IDE/Flex/flex_sdk_3/bin
 
 #flashbin: you will need to change the source of this property to match the location of your Adobe Flash CS3 files
-flashbin=V:/Program\ Files/Adobe/Adobe\ Flash CS3/en
+flashbin=V:/Program\ Files/Adobe/Adobe\ Flash CS3
