--- a/src/charts/build.properties
+++ b/src/charts/build.properties
@@ -9,8 +9,8 @@ component.mainclass=YAHOO.widget.Chart
 component.jsfiles=Chart.js,PieChart.js,CartesianChart.js,ChartTypes.js,Axis.js,NumericAxis.js,TimeAxis.js,CategoryAxis.js,Series.js
 
 #flexbin: you will need to change the source of this property to match the location of the flex bin directory on your machine
-flexbin=/Users/trippb/bin/flex_sdk_3/bin
+flexbin=D:/Datas/Code/IDE/Flex/flex_sdk_3/bin
 
 #flashbin: you will need to change the source of this property to match the location of your Adobe Flash CS3 files
-flashbin=/Applications/Adobe\ Flash\ CS3
+flashbin=V:/Program\ Files/Adobe/Adobe\ Flash CS3/en
 
